--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Hazel the Cat
+title: Hazel Chen - Personal Site
 email: achievegoal9@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
- Hazel Chen, a student in NYCU EE, is documenting her journey and experiences.
-baseurl: "/Hazel-the-Cat" # the subpath of your site, e.g. /blog
-url: "https://hazel-1212.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  Hazel-1212
+description: >-
+  Hazel Chen, a student in NYCU Electrical Engineering, is documenting her journey in engineering, actuarial science, and tech projects.
+baseurl: "/Hazel-the-Cat"
+url: "https://hazel-1212.github.io"
 
-# Build settings
+author: Hazel Chen
+github_username: Hazel-1212
+
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag  # 🔍 新增這行，開啟 SEO meta 自動生成
 
 # Exclude from processing.
 # The following items will not be processed, by default.
