--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Hazel
 email: achievegoal9@gmail.com
 description: >-
   Hazel Chen, a student in NYCU Electrical Engineering, is documenting her journey in engineering, actuarial science, and tech projects. 
-  交大電機修課/期末專題/交大工讀生。
+  交大電機修課心得/期末專題/交大工讀生。
 baseurl: "/Hazel-the-Cat"
 url: "https://hazel-1212.github.io"
 
