--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@
 
 title: Hazel 
 email: achievegoal9@gmail.com
-description: >-
-  Hazel Chen, a student in NYCU Electrical Engineering, is documenting her journey in engineering, actuarial science, and tech projects. 
-  交大電機修課心得/期末專題/交大工讀生。
+description: >- 
+  交大電機修課心得/期末專題/交大工讀生心得。
 baseurl: "/Hazel-the-Cat"
 url: "https://hazel-1212.github.io"
 
