--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Hazel 
 email: achievegoal9@gmail.com
 description: >- 
-  分享交大電機修課心得、校園、隨筆與專案。
+  分享交大電機修課心得、校園、追劇與期末專題。
 baseurl: "/Hazel-the-Cat"
 url: "https://hazel-1212.github.io"
 
